Can do deno or bun

--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "useUnknownInCatchVariables": true
   },
+  "imports": {
+    "linkedom": "https://esm.sh/linkedom@0.15.3/worker"
+  },
   "lint": {
     "rules": {
       "tags": ["recommended"],
